# mcp-run

./: README.md  pyproject.toml
mcp_exec/: main.py
mcp_run/: main.py
