[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "mcp-run"
version = "1.0.0"
description = "Wrap CLI tools as MCP servers without configuration files"
readme = "README.md"
license = "MIT"
keywords = [ "mcp", "cli", "llm", "claude", "tools",]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12",]
requires-python = ">=3.10"
dependencies = [ "mcp>=1.0.0",]
[[project.authors]]
name = "readwithai"

[project.scripts]
mcp-run = "mcp_run.main:main"

[project.urls]
Homepage = "https://github.com/readwithai/mcp-run"
Repository = "https://github.com/readwithai/mcp-run"
